Fixes homepage button issues on mobile

--- a/static/layout/_blog.scss
+++ b/static/layout/_blog.scss
@@ -8,6 +8,10 @@
   border: .2rem solid $color-theme-green-light-1;
   border-radius: .3rem;
 
+  @media only screen and (max-width: $bp-mobile-l) {
+    width: 100%;
+  }
+
   &__entry {
     margin: 2rem 1rem 0;
     height: min-content;
@@ -23,9 +27,31 @@
     }
 
     &--button-container {
-      display: inline-block;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
       margin-right: 2rem;
       margin-top: 1.5rem;
+
+      @media only screen and (max-width: $bp-sm) {
+        grid-template-columns: min-content;
+        grid-column-gap: 1rem;
+        margin-right: 0;
+        margin-left: 10rem;
+
+        &__add-blog {
+          grid-column: 1;
+        }
+        &__delete-blog {
+          grid-column: 2;
+        }
+        &__edit-blog {
+          grid-column: 3;
+        }
+      }
+
+      @media only screen and (max-width: $bp-mobile-s) {
+        margin-left: 1.5rem;
+      }
     }
 
     &--header {
@@ -105,5 +131,9 @@
 
   @media only screen and (max-width: $bp-med) {
     grid-column: 1 / end;
+  }
+
+  @media only screen and (max-width: $bp-mobile-m) {
+    padding: 1rem;
   }
 }
